<resources>
    <string name="app_name">android-test</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_empty">email is null</string>
    <string name="email_illegal">email format illegal</string>
    <string name="hello">hello,android test</string>
    <string name="password_empty">password is empty</string>
    <string name="menu_test_a">menu_test_a</string>
    <string name="menu_test_b">menu_test_b</string>
    <string name="menu_test_c">menu_test_c</string>
</resources>
